not satisfied by special emoji not showing correctly

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -4,25 +4,65 @@ body {
   min-height: 100vh;
 }
 
+ul {
+  list-style-type:none;
+  
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: bolder;
+  font-size: xx-large;
+  display: flex;
+
+  align-items: center;
 }
 
 .footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
+  justify-content: center;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 200px;
+  padding: 12px;
+  padding-bottom: 48px;
+  
+  
+}
+
+.container {
+  display: flex;
+}
+
+.important {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 24px;
 }
